# orchestrator

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  LICENSE  Modelfile  OPERATIONS.md  README.md  SETUP.md  docker-compose.windows.yml  migrate_instance_tracking.py  pytest.ini  requirements.txt  reset_passwords.py  start-amd.sh  start.ps1  start.sh  start_all.sh  wsl-start.sh
.claude/: settings.local.json
app/: auth.py  celery_app.py  config.py  database.py  db_migrations.py  dependencies.py  main.py  models.py  runtime_naming.py  schemas.py  uvicorn_config.py
config/: supervisor-celery.conf
docs/: PERFORMANCE_OPTIMIZATIONS.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: README.md  capture_replay_report.py  capture_task_evidence_bundle.py  check-logs-status.sh  check_openai_compatible_endpoint.py  cleanup-historical-docs.sh  cleanup-logs.sh  deploy-config.sh  diagnose_planning_stuck.py  ingest_knowledge.py  inspect_checkpoints.py  inspect_event_journal.py  inspect_runtime_logs.py  inspect_session_state.py  inspect_task_execution_attempts.py  orchestrator-mobile-api.sh  phase10a_operational_stability_sweep.py  phase10g_third_machine_evidence.sh  phase11v_repair_convergence_report.py  phase18i_machine_a_limited_validation.py  phase6b_evidence_report.py  phase8a_shadow_probe.py  sync-logs.sh  (+12 more)
scripts/evals/repair_budget_diagnostics/missing_docstring_and_main_guard/: pyproject.toml
scripts/evals/repair_budget_diagnostics/missing_docstring_and_main_guard/src/small_cli/: cli.py
(+510 files in other folders)
