[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "small-cli-fixture"
version = "0.1.0"
description = "Seed fixture for orchestrator python_cli_small_feature evaluation"
requires-python = ">=3.10"

[project.scripts]
small-cli = "small_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
